styles.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
    2. Remove default margin
  */
* {
  margin: 0;
}
/*
    Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
  */
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
/*
    5. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
    6. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}
/*
    7. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

ul {
  list-style-type: none;
  padding: 0;
}

a {
  text-decoration: none;
}

:root {
  --black-clr: #0c0c0e;
}

html {
  font-size: 62.5%;
}

.wrapper {
  margin: 0 auto;
  display: flex;
  max-width: 1440px;
}

/* HEADER */
.header {
  padding: 20px;
  color: #fff;
  background-color: var(--black-clr);
}

.brand-logo {
  font-family: "Forum";
  font-size: 3rem;
  font-weight: 400;
}

.navigation {
  margin-left: auto;
}

.navigation-links {
  display: flex;
  gap: 30px;
  font-family: "Inter";
  font-size: 2rem;
  font-weight: 400;
}

.navigation__link {
  color: #fff;
  font-size: 2rem;
}

